test/ui/tests/fail/class-multiple-neon-attrs-method.rs
struct Example;

#[neon::class]
impl Example {
    #[neon(async)]
    #[neon(task)]
    fn method(&self) {}
}

fn main() {}
